# requests-tracker

./: .gitignore  Makefile  README.md  docker-compose.yml
.github/workflows/: ci.yml
backend/: .env.example  Dockerfile  pyproject.toml  requirements-dev.txt  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 289774487a98_add_composite_index_on_created_at_id.py  9f42471d77bd_initial_schema.py
backend/app/: bootstrap.py  main.py
backend/app/api/: deps.py  router.py
backend/app/api/routers/: auth.py  tickets.py
backend/app/core/: config.py  database.py  db_types.py  exceptions.py  security.py
backend/app/models/: __init__.py  enums.py  ticket.py  user.py
backend/app/repositories/: __init__.py  ticket.py
backend/app/schemas/: __init__.py  auth.py  common.py  ticket.py
backend/app/services/: __init__.py  auth.py  ticket.py
backend/tests/: conftest.py  test_auth.py  test_business_rules.py  test_config.py  test_tickets_crud.py  test_tickets_query.py
frontend/: .eslintrc.cjs  nginx.conf  package-lock.json  package.json  vite.config.ts
frontend/src/: main.tsx
frontend/src/app/: App.tsx  providers.tsx
frontend/src/app/styles/: app.css  global.css  tokens.css
frontend/src/shared/api/: http.test.ts  http.ts  types.ts
frontend/src/shared/lib/: formatDate.ts
frontend/src/shared/session/: session.ts
frontend/src/shared/ui/: Badge.tsx  Button.tsx  ConfirmDialog.test.tsx  ConfirmDialog.tsx  Field.tsx  Modal.test.tsx  Modal.tsx  SelectField.tsx  Spinner.tsx  TextField.tsx  (+1 more)
frontend/src/test/: renderWithProviders.tsx  setup.ts
(+19 files in other folders)
